# myheart

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/myheart/: database.py  dependencies.py  main.py  process.py
api/myheart/internal/: admin.py
api/myheart/routers/: heart_rate.py  users.py
api/tests/: test_main.py
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Header.tsx  HeartRateTable.tsx  Layout.tsx  StatCard.tsx  StatusBadge.tsx  index.ts
dashboard/src/hooks/: useHeartRate.ts
dashboard/src/types/: index.ts
mobile/: .env  App.js  package-lock.json  package.json  tailwind.config.js
simulator/: Dockerfile  pyproject.toml  simulator.py
