[project]
name = "myheart"
version = "0.1.0"
description = "Wearable Heart Rate Monitoring API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.5",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
